# offshore

./: CMakeLists.txt  LICENSE  README.md  check_output.py
FLTK_utils/: Fl_Threads.h
FLTK_utils/FLTK_test/: GLWindow2d.cpp  GLWindow2d.h  GLWindow3d.cpp  GLWindow3d.h  MainWindow.cpp  MainWindow.h  MainWindowUI.cxx  MainWindowUI.h  main.cpp
FLTK_utils/FLTK_test/AppStates/: StateManager.cpp  StateManager.h
FLTK_utils/FLTK_test/AppStates/GLSimpleState/: GLSimpleState2d.cpp  GLSimpleState2d.h  GLSimpleState3d.cpp  GLSimpleState3d.h
FLTK_utils/FLTK_test/UtilSources/: GLCamera.cpp  GLCamera.h
FLTK_utils/FLTK_test/UtilSources/DrawUtils/: Draw2D.cpp  Draw2D.h  SpecialMeshObject.cpp  SpecialMeshObject.h  VariousObjects.cpp  VariousObjects.h  gltest.cpp  gltest.h
FLTK_utils/FLTK_test/UtilSources/Math/: Matrix4x4.h  Quaternion.cpp  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h
FLTK_utils/FLTK_test/UtilSources/Utils/: draw_utils.h  math_utils.h
FLTK_utils/FLTK_tutorial/: FLTK_basics.cpp  FLTK_mywidget.cpp  FLTK_opengl_recursion.cpp  FLTK_tests.cpp  FLTK_threads.cpp  FLTK_threads_000.cpp  FLTK_threads_001.cpp  FLTK_threads_002.cpp  FLTK_threads_temp.cpp  fltk_win_with_gl
JavaClientServer/: pom.xml
JavaClientServer/src/main/java/com/codebind/: App.form  App.java
JavaClientServer/src/main/java/examples/: Execl.java  FileList.java  Sftp.java  SimpleCallback.java  SimpleLinuxGui.java  ThreadPoolMethods.java  java_cpp.java
JavaClientServer/src/main/java/net/: Echo.form  Echo.java
JavaClientServer/src/main/java/ssh/: ClientServer.form  ClientServer.java  FileTree.java  ManoUserInfo.java
JavaClientServer/src/main/java/temp_calc_cpp/: ColorContourCanvas.java  ColorContourPlot.java  ContourResolutionDialog.java  TempCalcJava.cpp  TempCalcJava.java  TempCalcJava1.h  TemperatureApp.java  tempCalc.cpp  tempCalcRoutines.cpp  tempCalcRoutines.h
JavaClientServer/src/main/resources/openvpn_config/: auth.txt  delli20vpn.ovpn
MPI_CUDA/: AResults.h  CMakeLists.txt  Cases.h  Ex_1.m  Ex_2.m  Ex_3.m  JONSWAP.py  MpiMaster.cpp  MpiMaster.h  MpiSlave.cpp  MpiSlave.h  OCylinderFloating.cpp  OCylinderFloating.h  OElemCylinder.cpp  OElemCylinder.h  OMorisonEquation.cpp  OMorisonEquation.h  OParticle.cpp  OParticle.h  OSeas.cpp  OSeas.h  OSubSystemElems.cpp  OSubSystemElems.h  OSubSystemWaves.cpp  OSubSystemWaves.h  OSysObjEnv.cpp  OSysObjEnv.h  OTime.cpp  OTime.h  OVec.cpp  OVec.h  OWave.cpp  OWave.h  OWavenumber.cpp  OWavenumber.h  OWaves.cpp  OWaves.h  Untitled.ipynb  Untitled000.ipynb  Untitled1.ipynb  (+22 more)
MathGL_utils/: MathGL_tests.cpp
OpenGL/OpenGL_tutorial/: CMakeLists.txt  CMakeLists1.txt
OpenGL/OpenGL_tutorial/FLTK_OpenGl_events/: MyGLWindow.cpp  MyGLWindow.h  Untitled.ipynb  main.cpp
OpenGL/OpenGL_tutorial/FLTK_OpenGl_events/OpenGl_Fltk_events_temp/: MyGLWindow.cpp  MyGLWindow.h
OpenGL/OpenGL_tutorial/GLUT-Object-Oriented-Framework/: GlutFramework.h  PerformanceTimer.cpp
OpenGL/OpenGL_tutorial/OpenGl_Calc_Pthreads/: opengl_mandel_pthread_example.cpp
OpenGL/OpenGL_tutorial/OpenGl_Plot2d/: OpenGl_Plot2d_001.cpp  OpenGl_Plot2d_002.cpp  OpenGl_Plot2d_002.h  res_texture.c  shader_utils.cpp
OpenGL/OpenGL_tutorial/OpenGl_SDL_Plot2d/: OpenGl_Plot2d_000.cpp  OpenGl_Plot2d_001.cpp  OpenGl_Plot2d_002.cpp  OpenGl_Plot2d_002.h  shader_utils.cpp  shader_utils.h
OpenGL/OpenGL_tutorial/OpenGl_Simple/: OpenGl_Simple_Example.cpp  OpenGl_draw_mesh_class.cpp  opengl_glut_fltk_curve.cpp  opengl_recursion.cpp  opengl_redraw_part_by_damage.cpp  opengl_simple.cpp  shape_interpolation_animation_example.cpp
UtilSources/: CUDA_DUMMY.h  mem_utils.cpp  mem_utils.h  template_utils.cpp  template_utils.h  utils.h
UtilSources/Containers/: std_utils.h  std_vector_2d.h  std_vector_3d.cpp  std_vector_3d.h
UtilSources/Math/: FFT.cpp  FFT.h  const.h  env.cpp  env.h  math.cpp  math.h  matrixmath.cpp  matrixmath.h  phys.h  real.h  scatmech.h  trigonometry.h
UtilSources/OMath/: Quaternion.h  Vector2.h  Vector3.h
UtilSources/temp/: matrix.cpp  matrix.h  matrix3d.cpp  matrix3d.h  vector.cpp  vector.h
